--- a/LMS.API/appsettings.json
+++ b/LMS.API/appsettings.json
@@ -12,7 +12,6 @@
     "Expires": 5
   },
   "ConnectionStrings": {
-    "UserContext": "Server=(localdb)\\mssqllocaldb;Database=UserContext-58532878-2677-4d00-881b-674457b5bb90;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "LMSAPIContext": "Server=(localdb)\\mssqllocaldb;Database=LMSAPIContext-88eed2e4-d3cd-45dc-9337-e8d75b256742;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DatabaseContext": "Server=(localdb)\\mssqllocaldb;Database=DatabaseContext;Trusted_Connection=True;"
   }
 }
