corrected mis-configured  appsetting.json file host path address for tokens and updated Database Context

--- a/LMS.API/appsettings.json
+++ b/LMS.API/appsettings.json
@@ -6,12 +6,12 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DatabaseContext": "Server=(localdb)\\mssqllocaldb;Database=DatabaseContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "JwtSettings": {
     "Issuer": "LMS",
-    "Audience": "Your audience",
+    "Audience": "http://localhost:5058",
     "Expires": 5
-  },
-  "ConnectionStrings": {
-    "DatabaseContext": "Server=(localdb)\\mssqllocaldb;Database=DatabaseContext;Trusted_Connection=True;"
   }
 }
